# vr.common

./: .gitignore  .hgignore  .hgtags  .travis.yml  CHANGES.rst  CHANGES.txt  README.rst  conftest.py  pytest.ini  setup.cfg  setup.py  tox.ini
docs/: conf.py  index.rst
tests/: requirements.txt
vr/common/: models.py  paths.py  repo.py  slugignore.py  utils.py
vr/common/balancer/: base.py  chained.py  dummy.py  nginx.py  stingray.py  varnish.py
vr/common/templates/: proc.conf
vr/common/tests/: __init__.py  test_models.py  test_repos.py  test_utils.py
