[bdist_wheel]
universal = 1

[metadata]
license_file = LICENSE
name = vr.common
author = Brent Tubbs
author_email = brent.tubbs@gmail.com
description = Libraries and for deploying with Velociraptor
long_description = file:README.rst
url = https://github.com/yougov/vr.common
classifiers =
	Development Status :: 5 - Production/Stable
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Programming Language :: Python :: 2.7
	Programming Language :: Python :: 3

[options]
packages = find:
include_package_data = true
python_requires = >=2.7
install_requires =
	six>=1.4.1
	utc
	requests
	PyYAML>=3.10
	sseclient==0.0.11
	contextlib2
	suds==0.4; python_version=="2.7"
	suds-py3; python_version!="2.7"
setup_requires = setuptools_scm >= 1.15.0

[options.extras_require]
testing =
	# upstream
	pytest >= 3.5, !=3.7.3
	pytest-checkdocs
	pytest-flake8

	# local
	redis
	pytest-redis

docs =
	# upstream
	sphinx
	jaraco.packaging >= 3.2
	rst.linker >= 1.9

	# local

balancers =
	paramiko
	django<2; python_version=="2.7"
	django; python_version!="2,7"

[options.entry_points]
